--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -177,6 +177,7 @@
             }
             h3 {
                 color: white;
+                font-size: 23px;
             }
         }
         article {
@@ -185,6 +186,16 @@
             padding-bottom: 2vh;
             text-align: center;
             background-color: lightgray;
+            @include flexCol(2vw);
+            align-items: center;
+        }
+        a{
+            background-color: $mainColor;
+            border: 2px solid $mainColor;
+            width: 35%;
+            color: black;
+            padding: 1%;
+            border-radius: 20px;
         }
     }
     // BRAZIL END
@@ -218,6 +229,46 @@
         }
     }
     // KOREA END
+    //COLOMBIA
+    .colombia{
+        width: 95%;
+        > article{
+            background-color: lightgrey;
+            padding: 2vh 0;
+            @include flexCol(2vw);
+            align-items: center;
+        }
+        h3{
+            font-size: 23px;
+            color: whitesmoke;;
+        }
+        > section{
+            background-image: url("https://preview.redd.it/xecbt3m7ecn71.png?width=640&crop=smart&auto=webp&s=191475fa25a21394da965e3c86b3e3cda444f71b");
+            height: 10vh;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        aside{
+            width: 100%;
+            height: 100%;
+            @include flexCenter;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+        p{
+            text-align: center;
+            padding: 1%;
+        }
+        a{
+            background-color: $mainColor;
+            border: 2px solid $mainColor;
+            width: 35%;
+            color: black;
+            padding: 1%;
+            border-radius: 20px;
+        }
+        
+    }
     //contact
     .contact{
        @include flexCol(2vw);
