--- a/scss/devices/colombia/_desktop.scss
+++ b/scss/devices/colombia/_desktop.scss
@@ -1,3 +1,67 @@
 @media (min-width:$desktopVersion){
-    
+    //nav
+    details {
+        display: none;
+    }
+
+    nav {
+        height: 10vh;
+        padding: 0 3%;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        z-index: 5;
+
+        > ul {
+            @include flexRow(1vw);
+            width: 45%;
+            justify-content: space-around;
+            text-transform: uppercase;
+        }
+
+        aside {
+            padding: 0;
+            width: 10vh;
+            height: 10vh;
+            @include flexRow;
+            justify-content: center;
+            align-items: center;
+        }
+
+        a {
+            color: black;
+            font-weight: 600;
+            &:hover {
+                color: $nav;
+            }
+        }
+    }
+     //HEADER
+     header {
+        height: 75vh;
+        a{
+            padding: 1vh 7vh;
+        }
+        h3{
+            width: 50%;
+        }
+        h2{
+            font-size: 3.5rem;
+        }
+        h1{
+            font-size: 2.5rem;
+        }
+        form{
+            [type=search]{
+                padding-right: 12vh;
+            }
+        }
+        input{
+            padding-bottom: 2%;
+            padding-top: 2%;
+        }
+    }
+    video {
+        height: 75vh;
+    }
 }
