--- a/scss/devices/colombia/_desktop.scss
+++ b/scss/devices/colombia/_desktop.scss
@@ -64,4 +64,101 @@
     video {
         height: 75vh;
     }
+    //fq
+    .faq{
+        width: 80%;
+    }
+    //travel
+    .travcontent{
+        figure{
+            flex-direction: row;
+        }
+        h3{
+            display: unset;
+            width: 100%;
+            font-size: 1.1rem;
+        }
+        
+    }
+    .travel{
+        h1{
+            font-size: 2rem;
+        }
+        h2{
+            font-size: 2.5rem;
+        }
+    }
+    //food
+    .food{
+        >aside {
+            width: 100%;
+        }
+        > section{
+            display: none;
+        }
+    }
+    .foodList{
+        >aside{
+            width: 100%;
+        }
+        img{
+            width: 100%;
+            height: 30vh;
+            border: 1px solid transparent;
+            border-radius: 15px;
+        }
+    }
+    //festival
+    .festival{
+        > section{
+            display: none;
+        }
+        figure{
+            padding: 4vh;
+        }
+    }
+    .festList{
+        column-gap: 2vh;
+    }
+    //places
+    .place1,
+    .place2,
+    .place3,
+    .place4{
+        width: 40%;
+        > figure{
+            width: 100%;
+        }
+        img{
+            padding: 0;
+            width: 100%;
+            height: 25vh;
+        }
+    }
+    .gallery{
+        flex-wrap: wrap;
+        column-gap: 2vh;
+        row-gap: 2vh;
+        > .place1,
+        .place2,
+        .place3,
+        .place4{
+            > figure{
+                padding: 0;
+            }
+        }
+    }
+    //quote
+    .quote{
+        height: 17vh;
+        h6{
+            font-size: 1.2rem;
+        }
+    }
+    .faq{
+        li{
+            padding: 1vh;
+        }
+    }
+    
 }
