--- a/scss/devices/korea/_desktop.scss
+++ b/scss/devices/korea/_desktop.scss
@@ -77,7 +77,7 @@
     }
 
     // INTRO
-    .kIntro figure {
+    .kIntro > section > figure {
         flex-direction: row;
         column-gap: 5vw;
         padding: 3%;
@@ -101,6 +101,7 @@
 
     // JEJU
     .kJeju {
+        padding: 5% 0;
         figure {
             flex-direction: row;
             column-gap: 2vw;
@@ -113,7 +114,7 @@
             font-size: 18px;
         }
         > section {
-            row-gap: 5vh;
+            row-gap: 2vh;
         }
     }
 
