--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -152,16 +152,18 @@
                 color: $footer;
             }
         }
+        section figure {
+            background-color: transparent;
+        }
     }
 
     // INTRO
     .kIntro {
-        padding: 0 5%;
         img:first-child {
             display: none;
         }
 
-        figure {
+        > section > figure {
             @include flexCol(2vh);
             align-items: center;
             padding: 5%;
@@ -179,7 +181,6 @@
 
     // SEOUL
     .kSeoul {
-        padding: 0 5%;
         img {
             width: 100%;
         }
@@ -215,7 +216,7 @@
     // JEJU
     .kJeju {
         background-color: $mainColor;
-        padding: 10% 5%;
+        padding: 10% 0;
         img {
             width: 100%;
             height: 45vh;
@@ -224,6 +225,7 @@
         > section > article {
             @include flexCol(2vh);
             align-items: center;
+            padding: 3%;
         }
         > section {
             @include flexCol(3vh);
@@ -244,7 +246,7 @@
     .kRecommendation {
         > section {
             @include flexCol(10vh);
-            padding: 5%;
+            // padding: 5%;
         }
         img {
             width: 100%;
@@ -280,11 +282,16 @@
 
     // SEASON
     .kSeason {
-        padding: 10% 5%;
+        padding: 10% 0;
         background-color: $mainColor;
         img {
             width: 100%;
             height: 50vh;
+        }
+        > article {
+            > h4 {
+                padding: 0 5%;
+            }
         }
         > section {
             @include flexCol(5vh);
