--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -43,6 +43,7 @@
             padding: 5%;
             font-size: 18px;
             font-weight: 600;
+            z-index:3 ;
 
             > ul:first-child {
                 @include flexCol(3vh);
